--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,4 +1,11 @@
 .content {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 0 20px;
+}
+
+@media screen and (max-width: 627px) {
+  .content {
+    padding: 0;
+  }
 }
