--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,26 +1,21 @@
-.card {
-  padding-bottom: 20px;
-}
-
 .card__image {
-  max-width: 413px;
-  max-height: 413px;
   width: 413px;
   height: 413px;
   object-fit: cover;
   display: block;
-  border-radius: 10px;
+  border-radius: 8px;
+  margin-bottom: 12px;
 }
 
 .card__description-wrap {
   display: flex;
   justify-content: space-between;
-  padding: 8px 0 0;
 }
 
 .card__description {
   font-weight: 500;
   font-size: 20px;
+  line-height: 1.2;
   color: #212121;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -59,7 +54,7 @@
   }
   .card__description {
     font-size: 16px;
-    max-width: 220px;
+    max-width: 235px;
     line-height: 1;
   }
   .card__like-icon {
