--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,9 +1,9 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  gap: 20px;
+  gap: 40px 20px;
   border-bottom: 1px solid #21212166;
-  padding: 20px 0;
+  padding: 20px 0 40px;
   justify-content: center;
 }
 
