--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,8 @@
-.footer {
+.footer__copyright {
   font-size: 16px;
-  display: flex;
-  justify-content: center;
   color: #212121b2;
-  margin-top: 60px;
+  margin: 0;
+  padding: 60px 0;
+  line-height: 1;
+  text-align: center;
 }
