--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,6 +2,6 @@
   background-color: #fff;
   display: flex;
   justify-content: center;
-  height: 46px;
+  padding: 10px 0;
   align-items: center;
 }
